--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@
 
 }
 header{
-    height: 100px;
+    height: 50px;
     width: 80%;
     background-color: #e579e6;
     margin: 20px auto;
 }
 .page-center{
     width: 80%;
-    height: 350px;
+    height: 175px;
     background-color: #e1d67a;
     margin: 20px auto;
 }
@@ -23,11 +23,32 @@ header{
 }
 .clearfix{
     width: 80%;
-    height: 1200px;
-    border: 3px solid black;
-    background-color:#abcfe7 ;
     margin: 20px auto;
+    background: blue;
 }
+.clm{
+    float: left;
+    padding: 10px;
+}
+.top{
+    height: 100px;
+    background-color: #abcfe7;
+    margin-bottom: 15px;
+}
+.left, .right{
+    background-color: #abcfe7;
+    width: 20%;
+    height: 600px;
+
+}
+.center {
+    background-color: #abcfe7;
+    width: 58%;
+    margin: 0 12px;
+    height: 600px;
+}
+
+
 
 
 footer{
